子应用环境变量

--- a/main-app/.prettierrc
+++ b/main-app/.prettierrc
@@ -6,5 +6,5 @@
   "trailingComma": "es5",
   "proseWrap": "never",
   "overrides": [{ "files": ".prettierrc", "options": { "parser": "json" } }],
-  "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-packagejson"]
+  "plugins": ["prettier-plugin-packagejson"]
 }
