--- a/vite-svelte-app/package.json
+++ b/vite-svelte-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelte-app",
+  "name": "vite-svelte-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "@tsconfig/svelte": "^5.0.0",
+    "@types/node": "^20.9.0",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.6",
     "tslib": "^2.6.0",
