--- a/apps/child-vue2/tsconfig.json
+++ b/apps/child-vue2/tsconfig.json
@@ -14,7 +14,7 @@
     "useDefineForClassFields": true,
     "sourceMap": true,
     "baseUrl": ".",
-    "types": ["webpack-env"],
+    "types": ["webpack-env", "node"],
     "paths": {
       "@/*": ["src/*"]
     },
