--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "welives",
   "license": "MIT",
   "scripts": {
-    "dev": "npm-run-all --parallel dev:main-app dev:child:*",
+    "dev": "npm-run-all --parallel dev:main-app dev:child*",
     "dev:main-app": "pnpm -F main-app dev",
     "dev:child-react18": "pnpm -F child-react18 start",
     "dev:child-vue2": "pnpm -F child-vue2 serve",
@@ -30,8 +30,10 @@
     "preinstall": "npx only-allow pnpm"
   },
   "devDependencies": {
+    "@types/node": "^20.14.12",
     "cross-env": "^7.0.3",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "typescript": "^5.5.4"
   },
   "engines": {
     "node": ">= 20"
