--- a/apps/child-vue2/package.json
+++ b/apps/child-vue2/package.json
@@ -33,5 +33,6 @@
     "sass-loader": "^12.0.0",
     "typescript": "~4.5.5",
     "vue-template-compiler": "^2.6.14"
-  }
+  },
+  "packageManager": "pnpm@8.9.0"
 }
