--- a/apps/main-app/package.json
+++ b/apps/main-app/package.json
@@ -20,25 +20,16 @@
     "lint": "umi lint"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.2.6",
+    "@ant-design/icons": "^5.4.0",
     "@micro-zoe/micro-app": "1.0.0-rc.2",
-    "antd": "^5.11.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "antd": "^5.19.3",
     "umi": "^4.3.10"
   },
   "devDependencies": {
-    "@types/react": "^18.2.31",
-    "@types/react-dom": "^18.2.14",
-    "@umijs/lint": "^4.0.87",
-    "@umijs/plugins": "^4.0.87",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.52.0",
-    "prettier": "^2.8.8",
-    "prettier-plugin-organize-imports": "^3.2.2",
-    "prettier-plugin-packagejson": "^2.4.3",
-    "stylelint": "^15.11.0",
-    "tailwindcss": "^3",
-    "typescript": "^5.2.2"
-  }
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@umijs/plugins": "^4.3.10",
+    "typescript": "^5.5.4"
+  },
+  "packageManager": "pnpm@8.9.0"
 }
