--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "npm-run-all": "^4.1.5",
     "typescript": "^5.5.4"
   },
+  "packageManager": "pnpm@8.9.0",
   "engines": {
     "node": ">= 20"
   },
